<resources>
    <string name="app_name">Kolko i krzyzyk</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Ustawienia</string>

    <string name="player_1">Gracz 1</string>
    <string name="player_2">Gracz 2</string>
    <string name="player_move">Ruch gracza</string>
    <string name="score">Punkty: </string>
    <string name="name">Imie: </string>
    <string name="player_won">Wygrał gracz nr </string>

    <string name="new_game">Nowa gra</string>
    <string name="title_activity_settings">Settings</string>

    <string name="MSG_set_players_name">Wpisz imiona graczy</string>
    <string name="MSG_set_player_name">Wpisz imię</string>
    <string name="MSG_accept">Zatwierdź</string>
    <string name="MSG_names_has_been_changed">Imiona zostały zmienione</string>
    <string name="MSG_points_has_been_reseted">Punkty zostały zresetowane</string>
    <string name="button_points_reset">Zresetuj punkty</string>
</resources>
