<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".kolkoikrzyzyk"
    android:id="@+id/fsdfsdf">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="start">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/player_1"
                android:id="@+id/textView"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/name"
                    android:id="@+id/textView5"
                    android:layout_gravity="left"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/textView6"
                    android:layout_gravity="left"
                    android:text=" "
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/score"
                    android:id="@+id/textView4"
                    android:layout_gravity="left"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/score_pl_1"
                    android:text=" "
                    android:layout_gravity="left"
                    />
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="end">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/player_2"
                android:id="@+id/textView2"
                 />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/name"
                    android:id="@+id/textView8"
                    android:layout_gravity="end"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/textView7"
                    android:text=" "
                    android:layout_gravity="right"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/score"
                    android:id="@+id/textView11"
                    android:layout_gravity="right"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/score_pl_2"
                    android:text="0"
                    android:layout_gravity="right"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text=" "
            android:id="@+id/player_anouce"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="@dimen/active_button_size"
            android:layout_height="@dimen/active_button_size"
            android:layout_margin="@dimen/active_button_margin"
            android:textSize="@dimen/active_button_text_size"
            android:text=" "
            android:id="@+id/button_p_0"
            android:onClick="buttonOnClick" />
        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="@dimen/active_button_size"
            android:layout_height="@dimen/active_button_size"
            android:layout_margin="@dimen/active_button_margin"
            android:textSize="@dimen/active_button_text_size"
            android:text=" "
            android:id="@+id/button_p_1"
            android:onClick="buttonOnClick" />
        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="@dimen/active_button_size"
            android:layout_height="@dimen/active_button_size"
            android:layout_margin="@dimen/active_button_margin"
            android:textSize="@dimen/active_button_text_size"
            android:text=" "
            android:id="@+id/button_p_2"
            android:onClick="buttonOnClick" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="@dimen/active_button_size"
            android:layout_height="@dimen/active_button_size"
            android:layout_margin="@dimen/active_button_margin"
            android:textSize="@dimen/active_button_text_size"
            android:text=" "
            android:id="@+id/button_p_3"
            android:onClick="buttonOnClick" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="@dimen/active_button_size"
            android:layout_height="@dimen/active_button_size"
            android:layout_margin="@dimen/active_button_margin"
            android:textSize="@dimen/active_button_text_size"
            android:text=" "
            android:id="@+id/button_p_4"
            android:onClick="buttonOnClick" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="@dimen/active_button_size"
            android:layout_height="@dimen/active_button_size"
            android:layout_margin="@dimen/active_button_margin"
            android:textSize="@dimen/active_button_text_size"
            android:text=" "
            android:id="@+id/button_p_5"
            android:onClick="buttonOnClick" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="@dimen/active_button_size"
            android:layout_height="@dimen/active_button_size"
            android:layout_margin="@dimen/active_button_margin"
            android:textSize="@dimen/active_button_text_size"
            android:text=" "
            android:id="@+id/button_p_6"
            android:onClick="buttonOnClick" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="@dimen/active_button_size"
            android:layout_height="@dimen/active_button_size"
            android:layout_margin="@dimen/active_button_margin"
            android:textSize="@dimen/active_button_text_size"
            android:text=" "
            android:id="@+id/button_p_7"
            android:onClick="buttonOnClick" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="@dimen/active_button_size"
            android:layout_height="@dimen/active_button_size"
            android:layout_margin="@dimen/active_button_margin"
            android:textSize="@dimen/active_button_text_size"
            android:text=" "
            android:id="@+id/button_p_8"
            android:onClick="buttonOnClick" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_game"
            android:id="@+id/button"
            android:onClick="buttonOnClick_new_game" />
    </LinearLayout>
</LinearLayout>
